--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.5",
     "sweetalert2": "^11.4.34",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
