--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
     "react-loading-skeleton": "^3.1.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-spinners": "^0.13.5",
+    "react-spinners": "^0.13.6",
     "sweetalert2": "^11.4.34",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
