--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-spinners": "^0.13.6",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "rupiah-format": "^1.0.0",
     "sweetalert2": "^11.6.15",
     "web-vitals": "^2.1.4"
   },
