--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-tabs": "^6.0.0",
     "redux": "^4.2.1",
-    "sweetalert2": "^11.7.2",
+    "redux-thunk": "^2.4.2",
+    "rupiah-format": "^1.0.0",
+    "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.0"
   },
