--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.3.3",
+    "bcrypt": "^5.1.0",
     "dayjs": "^1.11.7",
+    "exceljs": "^4.3.0",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
