--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "rupiah-format": "^1.0.0",
+    "socket.io-client": "^4.6.1",
     "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.0"
